Bug 482642 - On X11, cannot change multi-screen settings via OSD
Summary: On X11, cannot change multi-screen settings via OSD
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: OSD and Plasma applet (other bugs)
Version First Reported In: 6.0.1
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords: qt6
: 483993 486629 487673 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-07 04:54 UTC by kde-yyds
Modified: 2024-05-29 07:18 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.5
Sentry Crash Report:


Attachments
the one that shows when clicking meta+p (90.73 KB, image/png)
2024-03-07 14:09 UTC, kde-yyds
Details
kscreen.log (6.30 KB, text/plain)
2024-03-08 10:27 UTC, Akram Abdeslem Chaima
Details
Kscreen Monitor Configurations (outputs) (2.62 KB, application/zip)
2024-03-08 10:29 UTC, Akram Abdeslem Chaima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kde-yyds 2024-03-07 04:54:51 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
i can no longer change multi-screen settings via kwin's built-in popup after upgrading to plasma 6.0.1. On X11.
(As a workaround i have to change it in systemsettings

STEPS TO REPRODUCE
1. connect two displays
2. login plasma x11 session
3. click the key on the keyboard that opens the popup
4. change settings from it

OBSERVED RESULT
config not changed

EXPECTED RESULT
change the muiti-screen config

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.6.3-zen1-1-zen (64-bit)
Graphics Platform: X11
Processors: 20 × 12th Gen Intel® Core™ i7-12700
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 770
Manufacturer: HP
Product Name: HP Pro Tower 288 G9 PCI Desktop PC
ADDITIONAL INFORMATION
Comment 1 Vlad Zahorodnii 2024-03-07 14:02:09 UTC
> kwin's built-in popup

What popup? Can you post its screenshot?
Comment 2 kde-yyds 2024-03-07 14:09:43 UTC
Created attachment 166588 [details]
the one that shows when clicking meta+p
Comment 3 Nate Graham 2024-03-07 21:28:35 UTC
Does it also happen on Wayland, or only X11? It works for me on Wayland.
Comment 4 kde-yyds 2024-03-07 23:19:40 UTC
Not on wayland. Only on X11
Comment 5 Akram Abdeslem Chaima 2024-03-08 10:27:24 UTC
Created attachment 166695 [details]
kscreen.log
Comment 6 Akram Abdeslem Chaima 2024-03-08 10:29:22 UTC
Created attachment 166696 [details]
Kscreen Monitor Configurations (outputs)
Comment 7 Akram Abdeslem Chaima 2024-03-08 10:44:38 UTC
The same issue on X11 only , on Wayland works perfect .
when *kscreen Osd Selector* appears via Meta+P and try to change monitor nothing happens

I found configuration of the monitor in `.local/share/kscreen/outputs/` looks correct , SeeKscreen Monitor Configurations (outputs) ( https://bugs.kde.org/attachment.cgi?id=166696 ) .

When i try to change and switch monitors in  System Settings > Display & Monitor > Display Configuration  works . 
and this is  kscreen.log ( https://bugs.kde.org/attachment.cgi?id=166695 ).
Comment 9 Akram Abdeslem Chaima 2024-03-15 22:00:32 UTC
Hi @Fushan thnx for this commit (https://invent.kde.org/plasma/kscreen/-/merge_requests/293) , i tested this but the same issue .
Comment 10 Fushan Wen 2024-03-16 03:09:40 UTC
Git commit feb568c0a672deb45cec08a8a46761b8da948f2a by Fushan Wen.
Committed on 16/03/2024 at 03:08.
Pushed by fusionfuture into branch 'master'.

OsdAction: fix applying mode on X11

The output list contains disconnected ports, but the count should be
based on connected ports.
FIXED-IN: 6.0.3

M  +35   -8    common/osdaction.cpp

https://invent.kde.org/plasma/kscreen/-/commit/feb568c0a672deb45cec08a8a46761b8da948f2a
Comment 11 Fushan Wen 2024-03-16 03:12:10 UTC
Git commit 7885a4887c0c3437bbe46e5cc03af79203f60fac by Fushan Wen.
Committed on 16/03/2024 at 03:10.
Pushed by fusionfuture into branch 'Plasma/6.0'.

OsdAction: fix applying mode on X11

The output list contains disconnected ports, but the count should be
based on connected ports.
FIXED-IN: 6.0.3


(cherry picked from commit feb568c0a672deb45cec08a8a46761b8da948f2a)

M  +35   -8    common/osdaction.cpp

https://invent.kde.org/plasma/kscreen/-/commit/7885a4887c0c3437bbe46e5cc03af79203f60fac
Comment 12 Fushan Wen 2024-03-16 06:35:14 UTC
(In reply to Akram Abdeslem Chaima from comment #9)
> Hi @Fushan thnx for this commit
> (https://invent.kde.org/plasma/kscreen/-/merge_requests/293) , i tested this
> but the same issue .

Make sure you only have 2 connected outputs
Comment 13 Akram Abdeslem Chaima 2024-03-16 21:45:40 UTC
(In reply to Fushan Wen from comment #12)
> (In reply to Akram Abdeslem Chaima from comment #9)
> > Hi @Fushan thnx for this commit
> > (https://invent.kde.org/plasma/kscreen/-/merge_requests/293) , i tested this
> > but the same issue .
> 
> Make sure you only have 2 connected outputs

Already tested with 2 connected outputs and in Kscreen outputs folder i have two outputs configs , So when apply mode from applet selector there is no affect .
Comment 14 Fushan Wen 2024-03-17 01:28:43 UTC
I myself cannot reproduce, but you can try to debug yourself by adding some qDebug in OsdAction::applyAction to see what is wrong
Comment 15 Nicolas Fella 2024-03-19 23:32:12 UTC
*** Bug 483993 has been marked as a duplicate of this bug. ***
Comment 16 Tony 2024-03-31 15:46:02 UTC
From what I can see, this bug seems to be half-fixed. Changing screen layout through system tray option/button is fixed and works as it should. Changing such option via OSD when you hit Meta + P still does nothing.

Plasma: 6.0.3
Frameworks: 6.0.0
Qt: 6.6.2
Comment 17 Akram Abdeslem Chaima 2024-03-31 19:30:38 UTC
(In reply to Fushan Wen from comment #14)
> I myself cannot reproduce, but you can try to debug yourself by adding some
> qDebug in OsdAction::applyAction to see what is wrong

I tried to debug this but the same result
Comment 18 Akram Abdeslem Chaima 2024-03-31 19:32:28 UTC
(In reply to Tony from comment #16)
> From what I can see, this bug seems to be half-fixed. Changing screen layout
> through system tray option/button is fixed and works as it should. Changing
> such option via OSD when you hit Meta + P still does nothing.
> 
> Plasma: 6.0.3
> Frameworks: 6.0.0
> Qt: 6.6.2

Exactly it's works in other parts , just via OSD selector there is no effect .
Comment 19 kde-yyds 2024-04-12 11:54:03 UTC
I have updates to plasma 6.0.3, but on X11, changing multi-screen settings via OSD still does nothing.
Comment 20 Bug Janitor Service 2024-04-13 16:47:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/301
Comment 21 Fushan Wen 2024-04-17 04:31:37 UTC
Git commit 0ccb83f94f23bfdb3638e6e75cbaa7094ea74f14 by Fushan Wen.
Committed on 17/04/2024 at 04:30.
Pushed by fusionfuture into branch 'master'.

osd: fix actions not being applied in OSD

The osd application quits before the config operation job is finished.
This keeps the application running until the job is finished.
FIXED-IN: 6.0.5

M  +5    -5    common/osdaction.cpp
M  +2    -1    common/osdaction.h
M  +3    -1    osd/main.cpp
M  +7    -2    osd/osdmanager.cpp

https://invent.kde.org/plasma/kscreen/-/commit/0ccb83f94f23bfdb3638e6e75cbaa7094ea74f14
Comment 22 Fushan Wen 2024-04-17 04:31:46 UTC
Git commit 92bf3a462c95dc421453862a793ba3403998b82b by Fushan Wen.
Committed on 17/04/2024 at 04:30.
Pushed by fusionfuture into branch 'master'.

osd: show main window immediately after the application starts

This fixes having to press Meta+P twice to open the osd window.

M  +1    -0    osd/main.cpp

https://invent.kde.org/plasma/kscreen/-/commit/92bf3a462c95dc421453862a793ba3403998b82b
Comment 23 Fushan Wen 2024-04-17 04:36:12 UTC
Git commit 2012bc7b8a6ab6e5c8005eb01e672ba1a9934a80 by Fushan Wen.
Committed on 17/04/2024 at 04:34.
Pushed by fusionfuture into branch 'Plasma/6.0'.

osd: fix actions not being applied in OSD

The osd application quits before the config operation job is finished.
This keeps the application running until the job is finished.
FIXED-IN: 6.0.5


(cherry picked from commit 0ccb83f94f23bfdb3638e6e75cbaa7094ea74f14)

M  +5    -5    common/osdaction.cpp
M  +2    -1    common/osdaction.h
M  +3    -1    osd/main.cpp
M  +7    -2    osd/osdmanager.cpp

https://invent.kde.org/plasma/kscreen/-/commit/2012bc7b8a6ab6e5c8005eb01e672ba1a9934a80
Comment 24 Fushan Wen 2024-04-17 04:36:20 UTC
Git commit 892f44863ec8d64f4e4b4ad72fe2f79f607521f0 by Fushan Wen.
Committed on 17/04/2024 at 04:34.
Pushed by fusionfuture into branch 'Plasma/6.0'.

osd: show main window immediately after the application starts

This fixes having to press Meta+P twice to open the osd window.


(cherry picked from commit 92bf3a462c95dc421453862a793ba3403998b82b)

M  +1    -0    osd/main.cpp

https://invent.kde.org/plasma/kscreen/-/commit/892f44863ec8d64f4e4b4ad72fe2f79f607521f0
Comment 25 Nate Graham 2024-05-05 20:34:55 UTC
*** Bug 486629 has been marked as a duplicate of this bug. ***
Comment 26 David Redondo 2024-05-29 07:18:57 UTC
*** Bug 487673 has been marked as a duplicate of this bug. ***