OsdAction: fix applying mode on X11

The output list contains disconnected ports, but the count should be
based on connected ports.

BUG: 482642
FIXED-IN: 6.0.3


(cherry picked from commit feb568c0a672deb45cec08a8a46761b8da948f2a)